# data_adapter_oemof

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  conftest.py  environment.yml  pyproject.toml
.github/workflows/: linter.yml  pytest.yml
.github/worksflows/: pytest.yaml
data_adapter_oemof/: __init__.py  adapter.py  adapter_classes.py  adapters.py  build_datapackage.py  builders.py  calculations.py  dataclasses.py  mappings.py  settings.py  utils.py
data_adapter_oemof/mappings/: BUS_NAME_MAP.yaml  GLOBAL_PARAMETER_MAP.yaml  PARAMETER_MAP.yaml  PROCESS_ADAPTER_MAP.yaml  PROCESS_TYPE_MAP.yaml
docs/: conf.py
examples/industry/: .env  Industriestruktur.xlsx  data_adapter_industry.py
examples/industry/structures/: SEDOS_Modellstruktur_sh_test.xlsx
examples/transport/: data_adapter_transport.py  tabular_transport.py
src/data_adapter_oemof.egg-info/: requires.txt
tests/: .env  env_template  setup_mock.py  test_build_datapackage.py  test_data_adapter.py  test_databus_connection.py  test_example.py  test_hack_a_thon.py  test_mapping.py  utils.py
tests/_files/build_datapackage_goal/: datapackage..json  datapackage.json
tests/_files/build_datapackage_goal/data/elements/: bus.csv  modex_tech_Load.csv  modex_tech_generator_gas.csv  modex_tech_photovoltaic_utility.csv  modex_tech_storage_battery.csv  modex_tech_wind_turbine_onshore.csv
tests/_files/build_datapackage_goal/data/periods/: periods.csv
tests/_files/build_datapackage_goal/data/sequences/: modex_tech_Load_sequence.csv  modex_tech_generator_gas_sequence.csv  modex_tech_photovoltaic_utility_sequence.csv  modex_tech_wind_turbine_onshore_sequence.csv
tests/_files/build_datapackage_goal/elements/: bus.csv  modex_tech_generator_gas.csv  modex_tech_storage_battery.csv  modex_tech_wind_turbine_onshore.csv
tests/_files/build_datapackage_goal/sequences/: modex_tech_wind_turbine_onshore_sequence.csv
tests/_files/data_adapter_industry/datapackage/: datapackage.json
tests/_files/tabular_datapackage_hack_a_thon_goal/: datapackage.json
tests/_files/tabular_datapackage_hack_a_thon_goal/data/elements/: bus.csv  modex_com_lignite.csv  modex_tech_chp_steam.csv  modex_tech_generator_gas.csv  modex_tech_generator_steam.csv  modex_tech_load_load.csv  modex_tech_photovoltaics_utility.csv  modex_tech_storage_battery.csv  modex_tech_storage_pumped.csv  modex_tech_wind_turbine_onshore.csv
tests/_files/tabular_datapackage_mininmal_example/: datapackage.json
tests/_files/tabular_datapackage_mininmal_example/scripts/: infer.py
tests/_files/tsam/: tsam_config.json
tests/_files/tsam_goal/: datapackage.json  tsam_config.json
tests/_files/tsam_integration/: tsam_config.json
tests/collections/test_fill_nans/: collection.json
tests/structure/: HARDCODED_ES_STRUCT.json  hack-a-thon_by_file_name.csv  links.csv  minimal_links.csv  minimal_structure.csv  structure.csv
tests/structures/: Industriestruktur.xlsx  SEDOS_Modellstruktur.xlsx  hack-a-thon _by_subject.csv  minimal_structure.csv  structure.csv  test_fill_nans.xlsx
(+30 files in other folders)
